2012-09-24  chalabi

	* DESCRIPTION: Updated maintainer field.
	* NAMESPACE, R/zzz.Deprecated.R: Removed external C call.

2011-09-23  mmaechler

	* DESCRIPTION: remove deprecated "LazyLoad" entry

2010-10-26  chalabi

	* NAMESPACE: updated NAMESPACE

2010-07-23  chalabi

	* inst/DocCopying.pdf: removed DocCopying.pdf license is already
	  specified in DESCRIPTION file

2010-04-14  chalabi

	* NAMESPACE: updated NAMESPACE

2010-04-11  wuertz

	* R/assets-arrange.R, R/assets-fit.R, R/assets-lpm.R,
	  R/assets-mcr.R, R/assets-meancov.R, R/assets-outliers.R,
	  R/assets-portfolio.R, R/assets-select.R, R/assets-simulate.R,
	  R/assets-test.R, R/assetsArrange.R, R/assetsFit.R, R/assetsLPM.R,
	  R/assetsMCR.R, R/assetsMeanCov.R, R/assetsOutliers.R,
	  R/assetsPfolio.R, R/assetsSelect.R, R/assetsSim.R,
	  R/assetsTest.R: some files renamed for consistency

2010-02-21  dscott

	* ChangeLog, R/zzz.R, src/Makevars: Minor changes so passes check
	* ChangeLog, R/plot-pairs.R, R/zzz.R, src/Makevars: minor changes
	  to plot-pairs.R and fixed dll with alteration to zzz.R and
	  src/Makevars

2009-11-22  wuertz

	* R/stats-distance.R: mutinfo function modified
	* R/zzz.R, src/ecodist.c: C code modified to work all C programs
	  together
	* R/stats-distance.R, src/ecodist.c: C Code added ecodist.c
	* NAMESPACE, R/builtin-ecodist.R, R/stats-distance.R: namespace
	  updated
	* R/builtin-ecodist.R: function name modified
	* R/stats-distance.R: code modified
	* R/builtin-ecodist.R, R/stats-distance.R: distance measures added
	  (undocumented)

2009-10-26  wuertz

	* man/assetsMCR.Rd: man page examples corrected
	* NAMESPACE, R/assetsMCR.R, R/assetsPfolio.R, R/zzz.Deprecated.R,
	  man/assetsMCR.Rd: assetsMCR.R and .Rd script added for marginal
	  contribution to covariance risk

2009-09-28  chalabi

	* DESCRIPTION: updated version number
	* ChangeLog, DESCRIPTION: updated DESCR and ChangeLog
	* NAMESPACE: new NAMESPACE structure which should ease maintenance
	  of packages.