@@ -1,21 +1,21 @@
 Package: fAssets
-Version: 3010.81
-Date: 2007-10-08
 Title: Rmetrics - Analysing and Modelling Financial Assets
+Date: 2014-09-17
+Version: 3011.82
 Author: Rmetrics Core Team,
-      Yohan Chalabi [ctb],
-      Tobias Setz [ctb],
-      Diethelm Wuertz [aut, cre]
-Depends: R (>= 2.15.1), timeDate, timeSeries, fBasics, fMultivar
-Suggests: methods, MASS, robustbase, sn, mnormt, ecodist, mvnormtest, 
-      energy, RUnit
+	Diethelm Wuertz [aut],
+	Tobias Setz [cre]
+	Yohan Chalabi [ctb]
 Maintainer: Tobias Setz <tobias.setz@rmetrics.org>
 Description: Environment for teaching 
-      "Financial Engineering and Computational Finance"
+    "Financial Engineering and Computational Finance".
+Depends: R (>= 2.15.1), timeDate, timeSeries, fBasics
+Imports: fMultivar
+Suggests: methods, MASS, robustbase, sn, mnormt, ecodist, mvnormtest,
+	energy, RUnit
 Note: SEVERAL PARTS ARE STILL PRELIMINARY AND MAY BE CHANGED IN THE
-      FUTURE. THIS TYPICALLY INCLUDES FUNCTION AND ARGUMENT NAMES, AS
-      WELL AS DEFAULTS FOR ARGUMENTS AND RETURN VALUES.
+	FUTURE. THIS TYPICALLY INCLUDES FUNCTION AND ARGUMENT NAMES, AS
+	WELL AS DEFAULTS FOR ARGUMENTS AND RETURN VALUES.
 LazyData: yes
 License: GPL (>= 2)
-Repository: R-FORGE
 URL: https://www.rmetrics.org
