@@ -1,22 +1,12 @@
+################################################################################
+## Exports
+################################################################################
+exportPattern("^[^\\.]")
 
-
-################################################
-## fAssets
-################################################
-
-################################################
-## Manual Namespace
-################################################
-
+###############################################################################
+## Imports
+################################################################################
 import(timeDate)
 import(timeSeries)
 import(fBasics)
 import(fMultivar)
-
-################################################
-## functions
-################################################
-
-exportPattern(".")
-
-
